xl-as-code/artifacts/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: petclinic-app
  namespace: petclinic
  labels:
    run: petclinic-app
spec:
  type: NodePort
  selector:
    run: petclinic-app
  ports:
    - port: 8080
      targetPort: 8080
      nodePort: 30128
