xl-as-code/artifacts/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: petclinic-app
  namespace: petclinic
  labels:
    run: petclinic-app
spec:
  rules:
    - http:
       paths:
         - path: /
           backend:
             serviceName: petclinic-app
             servicePort: 8080
